--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
