Updated CI/CD script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Upload to cPanel via FTP
         run: |
-          lftp -e "set ssl:verify-certificate no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R ./out /public_html"
+          lftp -e "set ssl:check-hostname no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R ./out /public_html"
         env:
           FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
