--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to cPanel
+name: Deploy to cPanel via SFTP
 
 on:
   push:
@@ -10,22 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v2
 
-      - name: Install lftp
-        run: sudo apt-get update && sudo apt-get install lftp -y
-
-      - name: Install dependencies and build
+      - name: 🧱 Install dependencies and build
         run: |
           npm ci
           npm run build
           npm run export
 
-      - name: Upload to cPanel via FTP
-        run: |
-          lftp -e "set ssl:check-hostname no; open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_HOST; mirror -R ./out /public_html"
-        env:
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
-          FTP_HOST: ${{ secrets.FTP_HOST }}
+      - name: 📤 Upload via SFTP to cPanel
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SFTP_HOST }}
+          username: ${{ secrets.SFTP_USERNAME }}
+          password: ${{ secrets.SFTP_PASSWORD }}
+          port: ${{ secrets.SFTP_PORT }}
+          source: "./out/*"
+          target: "/home/${{ secrets.SFTP_USERNAME }}/public_html"
+          strip_components: 1
