--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,13 @@ jobs:
           npm run export
 
       - name: 📤 Upload via SFTP to cPanel
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/sftp-action@master
         with:
           host: ${{ secrets.SFTP_HOST }}
           username: ${{ secrets.SFTP_USERNAME }}
           password: ${{ secrets.SFTP_PASSWORD }}
           port: ${{ secrets.SFTP_PORT }}
-          source: "./out/*"
+          source: "out/*"
           target: "/home/${{ secrets.SFTP_USERNAME }}/public_html"
           strip_components: 1
+
